--- a/area/templates/configuracoes.html
+++ b/area/templates/configuracoes.html
@@ -1,15 +1,91 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block titulo %}
-Configurações
-{% endblock %}
-
-{% block head %}
-    <link rel="stylesheet" href="{% static 'css/configuracoes.css' %}">
-    {% include 'navbar-top.html' %}
-    {% include 'navbar.html' %}
-{% endblock %}
+{% block titulo %}Configurações{% endblock %}
 
 {% block content %}
+    {% include 'estrutura.html' %}
+    <div class="main-content">
+        <div class="table-container">
+            <h2 class="table-title-configuracoes"><i class="fas fa-cog"></i> Configurações</h2>
+        </div>
+
+        <div class="config-section">
+            <h3>Perfil de Usuário</h3>
+            <div class="config-item">
+                <label for="username">Nome de Usuário:</label>
+                <input type="text" id="username" value="Bruce Wayne">
+            </div>
+            <div class="config-item">
+                <label for="email">Email:</label>
+                <input type="email" id="email" value="bruce.wayne@wayneindustries.com">
+            </div>
+            <div class="config-item">
+                <label for="password">Alterar Senha:</label>
+                <input type="password" id="password">
+            </div>
+            <div class="config-item">
+                <label for="profile-pic">Foto de Perfil:</label>
+                <input type="file" id="profile-pic">
+            </div>
+            <button class="btn-save"><i class="fa-solid fa-save"></i> Salvar Alterações</button>
+        </div>
+
+        <div class="config-section">
+            <h3>Preferências</h3>
+            <div class="config-item">
+                <label for="language">Idioma:</label>
+                <select id="language">
+                    <option value="pt">Português</option>
+                    <option value="en">Inglês</option>
+                </select>
+            </div>
+            <div class="config-item">
+                <label for="timezone">Fuso Horário:</label>
+                <select id="timezone">
+                    <option value="gmt-3">GMT-3:00 (Brasília)</option>
+                    <option value="gmt-4">GMT-4:00 (Manaus)</option>
+                    <option value="gmt-5">GMT-5:00 (Acre)</option>
+                </select>
+            </div>
+            <div class="config-item">
+                <label for="notifications">Notificações:</label>
+                <input type="checkbox" id="notifications" checked> Ativar notificações
+            </div>
+            <button class="btn-save"><i class="fa-solid fa-save"></i> Salvar Preferências</button>
+        </div>
+
+        <div class="config-section">
+            <h3>Segurança</h3>
+            <div class="config-item">
+                <label for="2fa">Autenticação de Dois Fatores:</label>
+                <input type="checkbox" id="2fa" checked> Ativar 2FA
+            </div>
+            <div class="config-item">
+                <label for="activity-log">Log de Atividades:</label>
+                <button class="btn-view-log"><i class="fa-solid fa-eye"></i> Ver Log</button>
+            </div>
+            <div class="config-item">
+                <label for="account-status">Status da Conta:</label>
+                <span class="status-active">Ativa</span>
+            </div>
+            <button class="btn-danger"><i class="fa-solid fa-trash"></i> Deletar Conta</button>
+        </div>
+        
+        <div class="config-section">
+            <h3>Configurações Avançadas</h3>
+            <div class="config-item">
+                <label for="api-key">Chave API:</label>
+                <input type="text" id="api-key" value="sk-1234abcd5678efgh">
+            </div>
+            <div class="config-item">
+                <label for="data-export">Exportação de Dados:</label>
+                <button class="btn-export"><i class="fa-solid fa-file-export"></i> Exportar Dados</button>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
+{% block footer %}
+    {% include 'footer.html' %}    
 {% endblock %}
