--- a/area/templates/login.html
+++ b/area/templates/login.html
@@ -5,32 +5,29 @@
 Login - Indústrias Wayne
 {% endblock %}
 
-{% block head %}
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Trocchi&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/login.css' %}">
-{% endblock %}
-
 {% block content %}
-    <div class="banner-background">
-        <div class="header-content">
-            <img src="{% static 'images/logo.png' %}" alt="Logo Indústrias Wayne" class="logo">
-            <h1 class="titulo-principal mt-3">Indústrias Wayne</h1>
-        </div>
+<div class="banner-background">
         <div class="login-container">
-            <h2>Login</h2>
-            <form method="post">
+            <div class="header-content">
+                <img src="{% static 'images/logo.png' %}" alt="Logo Indústrias Wayne" class="logo">
+            </div>
+            <form action="{% url 'dashboard' %}" method="post">
                 {% csrf_token %}
-                <input type="text" name="matricula" placeholder="Matrícula" required>
-                <input type="password" name="password" placeholder="Senha" required>
-                <div class="links">
-                    <a href="#">Esqueceu a senha?</a>
-                    <a href="#">1º Acesso</a>
+                <div class="input-container">
+                    <i class="fas fa-user icon"></i>
+                    <input type="text" name="matricula" placeholder="Matrícula" required>
                 </div>
-                <a href="{% url 'dashboard' %}" class="login-button" type="submit">
-                    <img src="{% static 'images/seta.png' %}" alt="Entrar" class="seta">
-                </a>
+                <div class="input-container">
+                    <i class="fas fa-lock icon"></i>
+                    <input type="password" name="password" placeholder="Senha" required>
+                </div>
+                <div class="links">
+                    <a href="#" id="esqueceu-senha">Esqueceu a senha?</a>
+                    <a href="#" id="primeiro-acesso">1º Acesso</a>
+                </div>
+                <button id="login-button" type="submit">
+                    <i class="fas fa-arrow-right"></i>
+                </button>                
             </form>
         </div>
     </div>
