--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,6 @@
-<footer class="px-5 py-10">
-    <ul class="flex justify-between items-center">
-        <li>2024</li>
-        <li>Feito com Python (Django)</li>
-        <li>Thaynara Sabryna</li>
-    </ul>
-</footer>
+    <!-- Rodapé -->
+    <footer class="footer">
+        <div class="footer-content">
+            <p>&copy; 2024 Indústrias Wayne | Todos os direitos reservados.</p>
+        </div>
+    </footer>
